<?php die() ?>
Contact Us 3.0.2
================================================================================
~ Changes in Joomla 4.0.0-RC5 broke the date and time input fields. Now using native HTML 5 controls.

Contact Us 3.0.1
================================================================================
- GPG support (incompatible with PHP 8.0)
~ Converted all tables to InnoDB for better performance

Contact Us 3.0.0
================================================================================
+ Rewritten with FOF 4
+ Renamed ViewTemplates to tmpl (Joomla 4 convention, with fallback code for Joomla 3)
+ Yes/No options in the component and plugin options now work correctly under Joomla 4.0 beta 7 and later

Contact Us 2.1.2
================================================================================
- Dropped support for PHP 7.1.0
+ Custom error pages for missing FEF and unhandled PHP exceptions
~ Replace zero datetime with nullable datetime (gh-17)
~ PHP version warning can now handle "too new" versions.
~ Add PHP 8.0 in the list of known PHP versions, recommend PHP 7.4 or later
# [HIGH] Joomla 4 beta 6 changed how sessions work, breaking everything

Contact Us 2.1.1
================================================================================
+ Privacy policy consent checkbox (mandatory)
+ Default to sorting items by ID descending in the backend

Contact Us 2.1.0
================================================================================
+ Optional GPG encryption of outgoing emails
+ gh-15 Akismet support
+ Set default backend Items ordering to ID descending (new messages first)
+ Common PHP version warning scripts
+ Dark Mode
+ Joomla 4 compatible
# [HIGH] Unpublished contact categories were displayed in the frontend
# [LOW] Joomla 4 throws an exception when mail is disabled and you try to send an email

Contact Us 2.0.1
================================================================================